--- a/Arcanum.UI/Components/Styles/Specific/SearchResultListView.xaml
+++ b/Arcanum.UI/Components/Styles/Specific/SearchResultListView.xaml
@@ -11,12 +11,13 @@
             </Grid.ColumnDefinitions>
 
             <Image Grid.Column = "0"
-                   Source = "{Binding VisualRepresentation.IconPath}"
+                   Source = "{Binding VisualRepresentation.IconPath, TargetNullValue={x:Null}, FallbackValue={x:Null}}"
                    Width = "16"
                    Height = "16"
                    VerticalAlignment = "Center"
                    Margin = "0,0,5,0"
                    RenderOptions.BitmapScalingMode = "Fant" />
+
 
             <TextBlock Grid.Column = "1"
                        VerticalAlignment = "Center"
