--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -5,11 +5,13 @@
                          xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          xmlns:userControls = "clr-namespace:Arcanum.UI.Components.UserControls"
+                         xmlns:dig = "clr-namespace:Arcanum.Core.CoreSystems.ErrorSystem.Diagnostics;assembly=Arcanum.Core"
                          mc:Ignorable = "d"
                          Title = "ErrorLog"
                          Height = "600"
-                         Width = "1200"
-                         Background = "{StaticResource DefaultBackColorBrush}">
+                         Width = "1400"
+                         Background = "{StaticResource DefaultBackColorBrush}"
+                         WindowStartupLocation = "CenterScreen">
 
     <styleClasses:BaseWindow.Resources>
         <ResourceDictionary>
@@ -29,7 +31,7 @@
             <ColumnDefinition Width = "*"
                               MinWidth = "300" />
             <ColumnDefinition Width = "7" /> <!-- Spacer for a splitter-->
-            <ColumnDefinition Width = "300"
+            <ColumnDefinition Width = "500"
                               MinWidth = "200" />
         </Grid.ColumnDefinitions>
 
@@ -92,12 +94,93 @@
 
         <!-- Second row -->
 
-        <ListView Grid.Column = "0"
-                  Grid.Row = "1"
-                  x:Name = "ErrorLogListView"
-                  SelectionChanged = "ErrorLogListView_OnSelectionChanged"
-                  Margin = "4">
-        </ListView>
+        <DataGrid Grid.Row = "1"
+                  Grid.Column = "0"
+                  x:Name = "ErrorLogDataGrid"
+                  AutoGenerateColumns = "False"
+                  SelectedCellsChanged = "ErrorLogListView_OnSelectionChanged">
+
+            <DataGrid.Columns>
+                <!-- Severity Icon Column -->
+                <DataGridTemplateColumn Header = "Severity"
+                                        Width = "50">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType = "{x:Type dig:Diagnostic}">
+                            <Border CornerRadius = "4"
+                                    HorizontalAlignment = "Center"
+                                    Margin = "0,1">
+                                <Border.Style>
+                                    <Style TargetType = "Border">
+                                        <Setter Property = "Background"
+                                                Value = "Transparent" />
+                                        <Style.Triggers>
+                                            <DataTrigger Binding = "{Binding Severity}"
+                                                         Value = "Error">
+                                                <Setter Property = "Background"
+                                                        Value = "{StaticResource DimErrorRedColorBrush}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding = "{Binding Severity}"
+                                                         Value = "Warning">
+                                                <Setter Property = "Background"
+                                                        Value = "{StaticResource DimWarningYellowColorBrush}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding = "{Binding Severity}"
+                                                         Value = "Information">
+                                                <Setter Property = "Background"
+                                                        Value = "{StaticResource DimInformationBlueColorBrush}" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+
+                                <Image Width = "16"
+                                       Height = "16"
+                                       VerticalAlignment = "Center"
+                                       HorizontalAlignment = "Center">
+                                    <Image.Style>
+                                        <Style TargetType = "Image">
+                                            <Setter Property = "Source"
+                                                    Value = "pack://application:,,,/Assets/Icons/16x16/InfoCircle16x16.png" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding = "{Binding Severity}"
+                                                             Value = "Error">
+                                                    <Setter Property = "Source"
+                                                            Value = "pack://application:,,,/Assets/Icons/16x16/CloseCircle16x16.png" />
+                                                </DataTrigger>
+                                                <DataTrigger Binding = "{Binding Severity}"
+                                                             Value = "Warning">
+                                                    <Setter Property = "Source"
+                                                            Value = "pack://application:,,,/Assets/Icons/16x16/DangerCircle16x16.png" />
+                                                </DataTrigger>
+                                                <DataTrigger Binding = "{Binding Severity}"
+                                                             Value = "Information">
+                                                    <Setter Property = "Source"
+                                                            Value = "pack://application:,,,/Assets/Icons/16x16/InfoCircle16x16.png" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Image.Style>
+                                </Image>
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTextColumn Header = "Error Code"
+                                    Binding = "{Binding (dig:Diagnostic.Code)}"
+                                    Width = "250" />
+
+                <DataGridTextColumn Header = "Action"
+                                    Binding = "{Binding (dig:Diagnostic.Action)}"
+                                    Width = "450" />
+
+                <DataGridTextColumn Header = "Message"
+                                    Binding = "{Binding (dig:Diagnostic.Message)}"
+                                    Width = "*" />
+            </DataGrid.Columns>
+
+
+        </DataGrid>
 
         <Border Grid.Column = "2"
                 Grid.Row = "1"
@@ -122,9 +205,9 @@
                     <Border Grid.Column = "0"
                             Grid.ColumnSpan = "2"
                             Opacity = "0.2"
-                            Margin="2"
-                            CornerRadius="15">
-                        
+                            Margin = "2"
+                            CornerRadius = "15">
+
                         <Border.Style>
                             <Style TargetType = "Border">
                                 <Setter Property = "Background"
@@ -228,28 +311,49 @@
                                               CornerRadiusValue = "4"
                                               IsReadOnly = "True" />
 
-                <StackPanel Grid.Row = "4"
-                            Margin = "4, 2"
-                            HorizontalAlignment = "Right"
-                            Orientation = "Horizontal">
-                    <styleClasses:BaseButton Click = "ButtonBase_OnClick"
-                                             ToolTip = "Open folder of selected faulty file"
-                                             BorderBrush="{StaticResource DefaultBackColorBrush}">
+                <Grid Grid.Row = "4"
+                      Margin = "4, 2">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width = "30" />
+                        <ColumnDefinition Width = "*" />
+                        <ColumnDefinition Width = "30" />
+                        <ColumnDefinition Width = "30" />
+                    </Grid.ColumnDefinitions>
+
+                    <styleClasses:BaseButton Grid.Column = "0"
+                                             Click = "ExportToCsv_OnClick"
+                                             ToolTip = "Export the error log to a .csv file"
+                                             Margin = "2, 0"
+                                             BorderBrush = "{StaticResource DefaultBackColorBrush}">
                         <Image Source = "../../../Assets/Icons/20x20/FolderOpen20x20.png"
                                Width = "20"
                                Height = "20">
                         </Image>
                     </styleClasses:BaseButton>
-                    <styleClasses:BaseButton Margin = "4, 0, 0, 0"
+                    
+                    <styleClasses:BaseButton Grid.Column = "2"
+                                             Click = "ButtonBase_OnClick"
+                                             ToolTip = "Open folder of selected faulty file"
+                                             Margin = "2, 0"
+                                             BorderBrush = "{StaticResource DefaultBackColorBrush}">
+                        <Image Source = "../../../Assets/Icons/20x20/FolderOpen20x20.png"
+                               Width = "20"
+                               Height = "20">
+                        </Image>
+                    </styleClasses:BaseButton>
+                    
+                    <styleClasses:BaseButton Grid.Column = "3"
+                                             Margin = "2, 0"
                                              Click = "OpenFileAtPos_OnClick"
                                              ToolTip = "Open file at error position"
-                                             BorderBrush="{StaticResource DefaultBackColorBrush}">
+                                             BorderBrush = "{StaticResource DefaultBackColorBrush}">
                         <Image Source = "../../../Assets/Icons/20x20/File20x20.png"
                                Width = "20"
                                Height = "20">
                         </Image>
                     </styleClasses:BaseButton>
-                </StackPanel>
+                </Grid>
 
             </Grid>
         </Border>
