Fixed crash in ErrorLog from having a one way link by changing it to a readonly interface as intended.
Added Default.mpa parsing and discovered flaws in Descriptor concept.

--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -98,7 +98,8 @@
                   Grid.Column = "0"
                   x:Name = "ErrorLogDataGrid"
                   AutoGenerateColumns = "False"
-                  SelectedCellsChanged = "ErrorLogListView_OnSelectionChanged">
+                  SelectedCellsChanged = "ErrorLogListView_OnSelectionChanged"
+                  IsReadOnly="True">
 
             <DataGrid.Columns>
                 <!-- Severity Icon Column -->
