--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -99,7 +99,7 @@
                   x:Name = "ErrorLogDataGrid"
                   AutoGenerateColumns = "False"
                   SelectedCellsChanged = "ErrorLogListView_OnSelectionChanged"
-                  IsReadOnly="True">
+                  IsReadOnly = "True">
 
             <DataGrid.Columns>
                 <!-- Severity Icon Column -->
@@ -316,23 +316,34 @@
                       Margin = "4, 2">
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width = "30" />
                         <ColumnDefinition Width = "*" />
+                        <ColumnDefinition Width = "30" />
                         <ColumnDefinition Width = "30" />
                         <ColumnDefinition Width = "30" />
                     </Grid.ColumnDefinitions>
 
-                    <styleClasses:BaseButton Grid.Column = "0"
+                    <styleClasses:CorneredTextBox Grid.Column = "0"
+                                                  IsReadOnly = "True"
+                                                  Text = "{Binding SelectedPath, RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                                                  FontSize = "11"
+                                                  VerticalAlignment = "Stretch"
+                                                  BorderThickness="0"
+                                                  VerticalContentAlignment = "Center"
+                                                  Margin="0, 0, 2, 0"
+                                                  CornerRadiusValue="4">
+                    </styleClasses:CorneredTextBox>
+
+                    <styleClasses:BaseButton Grid.Column = "1"
                                              Click = "ExportToCsv_OnClick"
                                              ToolTip = "Export the error log to a .csv file"
                                              Margin = "2, 0"
                                              BorderBrush = "{StaticResource DefaultBackColorBrush}">
-                        <Image Source = "../../../Assets/Icons/20x20/FolderOpen20x20.png"
+                        <Image Source = "../../../Assets/Icons/20x20/ExportAsCsv20x20.png"
                                Width = "20"
                                Height = "20">
                         </Image>
                     </styleClasses:BaseButton>
-                    
+
                     <styleClasses:BaseButton Grid.Column = "2"
                                              Click = "ButtonBase_OnClick"
                                              ToolTip = "Open folder of selected faulty file"
@@ -343,7 +354,7 @@
                                Height = "20">
                         </Image>
                     </styleClasses:BaseButton>
-                    
+
                     <styleClasses:BaseButton Grid.Column = "3"
                                              Margin = "2, 0"
                                              Click = "OpenFileAtPos_OnClick"
