Introduce `ParsingViewer` and refactor parsing systems
- Added `ParsingViewer` for visualizing parsing steps, parsed files, and created objects in the UI.
- Implemented `ParsedObjects` property in `FileLoadingService` and updated parsing steps to define their processed types.
- Refactored `FileObj`, `FileDescriptor`, and `PathObj` properties for improved immutability and access patterns.
- Updated `DefaultMapPreParsingStep` and related steps with streamlined descriptor handling.
- Enhanced `MainWindow` with a command to open the parsing viewer for better debugging capabilities.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -105,6 +105,10 @@
         <CommandBinding Command = "mainWindow:MwCommands.GCCommand"
                         Executed = "GCCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute"/>
+        
+        <CommandBinding Command = "mainWindow:MwCommands.OpenParsingStepBrowserCommand"
+                        Executed = "OpenParsingStepBrowserCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
 
 
         <!-- Command Bindings for Debug Loading Triggers -->
@@ -265,6 +269,8 @@
                                        Command = "mainWindow:MwCommands.LoadingStepRunnerCommand" />
                 <uc:SearchableMenuItem Header = "Browse Mod Metadata"
                                        Click = "MenuItem_OnClick" />
+                <uc:SearchableMenuItem Header = "ParsingStepBrowser"
+                                       Command = "mainWindow:MwCommands.OpenParsingStepBrowserCommand"/>
                 <uc:SearchableMenuItem Header = "UI Elements Browser"
                                        Command = "mainWindow:MwCommands.OpenUIElementsBrowserCommand">
                     <uc:SearchableMenuItem.Icon>
