Add right-click functionality to CSV export in ErrorLog
- Updated `ExportToCsv_OnClick` method to handle right-click for exporting and opening the CSV file.
- Modified event handler from `Click` to `MouseUp` to accommodate right-click interactions.
- Adjusted tooltip to reflect the new functionality.

--- a/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -334,8 +334,8 @@
                     </styleClasses:CorneredTextBox>
 
                     <styleClasses:BaseButton Grid.Column = "1"
-                                             Click = "ExportToCsv_OnClick"
-                                             ToolTip = "Export the error log to a .csv file"
+                                             MouseUp = "ExportToCsv_OnClick"
+                                             ToolTip = "Export the error log to a .csv file&#10;RMB to export and open the file"
                                              Margin = "2, 0"
                                              BorderBrush = "{StaticResource DefaultBackColorBrush}">
                         <Image Source = "../../../Assets/Icons/20x20/ExportAsCsv20x20.png"
