--- a/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
@@ -40,9 +40,9 @@
                       SelectedItem = "{Binding Value,Converter={StaticResource EnumValueConverter}, Mode=TwoWay}"
                       Margin = "1, 1, 4, 1"
                       Background = "Transparent"
-                      ToolTip="{Binding SelectedItem.Description, RelativeSource={RelativeSource Self}}"
-                      TextSearch.TextPath="Value"
-                      ToolTipService.InitialShowDelay="100">
+                      ToolTip = "{Binding SelectedItem.Description, RelativeSource={RelativeSource Self}}"
+                      TextSearch.TextPath = "Value"
+                      ToolTipService.InitialShowDelay = "100">
                 <ComboBox.Style>
                     <Style TargetType = "ComboBox"
                            BasedOn = "{StaticResource BorderlessComboboxStyle}">
@@ -78,8 +78,8 @@
                                             Padding = "0"
                                             HorizontalAlignment = "Stretch"
                                             VerticalAlignment = "Stretch"
-                                            MaxValue="{x:Static sys:Int32.MaxValue}"
-                                            MinValue="{x:Static sys:Int32.MinValue}"/>
+                                            MaxValue = "{x:Static sys:Int32.MaxValue}"
+                                            MinValue = "{x:Static sys:Int32.MinValue}" />
         </DataTemplate>
 
         <DataTemplate x:Key = "DecimalTemplate"
@@ -118,7 +118,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Text = "{Binding Value, Converter={StaticResource TypeToStringConverter}}"
-                           TextSearch.TextPath="Value"
+                           TextSearch.TextPath = "Value"
                            Margin = "2, 0, 0, 0"
                            VerticalAlignment = "Center"
                            HorizontalAlignment = "Left" />
@@ -185,48 +185,68 @@
 
         <DataTemplate x:Key = "PropertyRowTemplate"
                       DataType = "{x:Type delayedEvents:PropertyItem}">
-            <Grid HorizontalAlignment = "Stretch">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition
-                        Width = "{Binding LabelWidth, RelativeSource={RelativeSource AncestorType={x:Type baseControls:PropertyGrid}}}" />
-                    <ColumnDefinition Width = "7" />
-                    <ColumnDefinition Width = "1*" />
+            <Border x:Name = "OuterBorder"
+                    BorderThickness = "1"
+                    Margin="2, 0"
+                    CornerRadius="4">
+                <Grid HorizontalAlignment = "Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition
+                            Width = "{Binding LabelWidth, RelativeSource={RelativeSource AncestorType={x:Type baseControls:PropertyGrid}}}" />
+                        <ColumnDefinition Width = "7" />
+                        <ColumnDefinition Width = "1*" />
 
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height = "20" />
-                    <RowDefinition Height = "3" />
-                </Grid.RowDefinitions>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height = "20" />
+                        <RowDefinition Height = "3" />
+                    </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row = "0"
-                           Grid.Column = "0"
-                           Text = "{Binding FormattedName}"
-                           VerticalAlignment = "Center"
-                           Margin = "7, 0, 0, 0" />
+                    <TextBlock Grid.Row = "0"
+                               Grid.Column = "0"
+                               Text = "{Binding FormattedName}"
+                               VerticalAlignment = "Center"
+                               Margin = "7, 0, 0, 0" />
 
-                <Rectangle Grid.Row = "0"
-                           Grid.Column = "1"
-                           Width = "1"
-                           Margin = "3"
-                           Fill = "{StaticResource LightBackColorBrush}" />
+                    <Rectangle Grid.Row = "0"
+                               Grid.Column = "1"
+                               Width = "1"
+                               Margin = "3"
+                               Fill = "{StaticResource LightBackColorBrush}" />
 
-                <Border x:Name = "Border"
-                        Grid.Row = "0"
-                        Grid.Column = "2"
-                        Background = "Transparent"
-                        CornerRadius = "3">
-                    <ContentPresenter Content = "{Binding}"
-                                      ContentTemplateSelector = "{StaticResource PropertyEditorSelector}" />
+                    <Border x:Name = "Border"
+                            Grid.Row = "0"
+                            Grid.Column = "2"
+                            Background = "Transparent"
+                            CornerRadius = "3">
+                        <ContentPresenter Content = "{Binding}"
+                                          ContentTemplateSelector = "{StaticResource PropertyEditorSelector}" />
 
-                </Border>
+                    </Border>
 
-                <Rectangle Grid.Row = "1"
-                           Grid.Column = "0"
-                           Grid.ColumnSpan = "3"
-                           Height = "1"
-                           Fill = "{StaticResource LightBackColorBrush}"
-                           Margin = "6,0" />
-            </Grid>
+                    <Rectangle Grid.Row = "1"
+                               Grid.Column = "0"
+                               Grid.ColumnSpan = "3"
+                               Height = "1"
+                               Fill = "{StaticResource LightBackColorBrush}"
+                               Margin = "6,0" />
+                </Grid>
+                <Border.Style>
+                    <Style TargetType = "Border">
+                        <Setter Property = "BorderBrush"
+                                Value = "Transparent" />
+                        <Style.Triggers>
+                            <DataTrigger
+                                Binding = "{Binding IsSelected, 
+                                RelativeSource={RelativeSource AncestorType=ListBoxItem}}"
+                                Value = "True">
+                                <Setter Property = "BorderBrush"
+                                        Value = "{StaticResource BlueSelectionBackColorBrush}" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
+            </Border>
         </DataTemplate>
 
     </UserControl.Resources>
