Remove unused using directives and references across the solution
- Cleaned up unused `using` directives in multiple files to enhance code readability and maintainability.
- Added `Common` project to the solution to centralize shared utilities.
- Minor modifications to `SearchWindow` (`SearchTextBox_OnKeyUp` implementation) to enhance keyboard navigation.
- Refactored `ExecuteOnSelected` logic for better code organization.

--- a/Arcanum.UI/Components/Windows/MinorWindows/SearchWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/SearchWindow.xaml
@@ -104,7 +104,8 @@
             <userControls:SearchTextBox Grid.Row = "1"
                                         x:Name = "SearchTextBox"
                                         BorderThickness = "0"
-                                        Margin = "0, 4, 0, 0">
+                                        Margin = "0, 4, 0, 0"
+                                        KeyUp="SearchTextBox_OnKeyUp">
             </userControls:SearchTextBox>
 
 
