--- a/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
@@ -2,22 +2,55 @@
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:uc = "clr-namespace:Arcanum.UI.Components.UserControls"
-             xmlns:delayedEvents = "clr-namespace:Arcanum.Core.Utils.DelayedEvents;assembly=Arcanum.Core"
+             xmlns:propItem = "clr-namespace:Arcanum.Core.Utils.DelayedEvents;assembly=Arcanum.Core"
              xmlns:converters = "clr-namespace:Arcanum.UI.Components.Converters"
              xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
              xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls"
-             xmlns:sys = "clr-namespace:System;assembly=System.Runtime">
+             xmlns:sys = "clr-namespace:System;assembly=System.Runtime"
+             xmlns:propertyGrid = "clr-namespace:Arcanum.UI.Components.UserControls.PropertyGrid"
+             xmlns:win = "clr-namespace:System.Drawing;assembly=System.Drawing.Primitives"
+             xmlns:global = "clr-namespace:;assembly=Arcanum.Core">
 
 
     <UserControl.Resources>
         <converters:EnumValuesConverter x:Key = "EnumValuesConverter" />
         <converters:EnumValueConverter x:Key = "EnumValueConverter" />
+        <converters:EnumValuesFromValueConverter x:Key = "EnumValuesProviderConverter" />
+        <converters:EnumValueFromValueConverter x:Key = "EnumValueProviderConverter" />
+        <converters:EnumValuesToStringConverter x:Key = "EnumValuesToString" />
         <converters:DecimalDoubleConverter x:Key = "DecimalDoubleConverter" />
         <converters:BoolToVisibilityConverter x:Key = "BoolToVisibilityConverter" />
         <converters:TypeToStringConverter x:Key = "TypeToStringConverter" />
 
+        <Style x:Key = "ViewDetailsButtonStyle"
+               TargetType = "styleClasses:BaseButton"
+               BasedOn = "{StaticResource {x:Type styleClasses:BaseButton}}">
+            <Setter Property = "Margin"
+                    Value = "2" />
+            <Setter Property = "Padding"
+                    Value = "0" />
+            <Setter Property = "VerticalAlignment"
+                    Value = "Stretch" />
+            <Setter Property = "HorizontalAlignment"
+                    Value = "Stretch" />
+            <Setter Property = "BorderThickness"
+                    Value = "0" />
+
+            <Setter Property = "ContentTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <Image Source = "/Assets/Icons/20x20/Eye20x20.png"
+                               VerticalAlignment = "Center"
+                               HorizontalAlignment = "Center"
+                               Stretch = "UniformToFill"/>
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+
         <DataTemplate x:Key = "StringTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <styleClasses:CorneredTextBox Text = "{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           Margin = "0, 0, 6, 0"
                                           VerticalAlignment = "Center"
@@ -30,12 +63,12 @@
         </DataTemplate>
 
         <DataTemplate x:Key = "BoolTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <CheckBox IsChecked = "{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         </DataTemplate>
 
         <DataTemplate x:Key = "EnumTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <ComboBox ItemsSource = "{Binding Type, Converter={StaticResource EnumValuesConverter}}"
                       SelectedItem = "{Binding Value,Converter={StaticResource EnumValueConverter}, Mode=TwoWay}"
                       Margin = "1, 1, 4, 1"
@@ -63,14 +96,14 @@
         </DataTemplate>
 
         <DataTemplate x:Key = "DefaultTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <TextBlock Text = "{Binding Value}"
                        Width = "150"
                        Margin = "1" />
         </DataTemplate>
 
         <DataTemplate x:Key = "IntTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <baseControls:BaseNumericUpDown Value = "{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                             Margin = "0, 0, 6, 0"
                                             Background = "Transparent"
@@ -83,7 +116,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key = "DecimalTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <baseControls:DecimalBaseNumericUpDown
                 Value = "{Binding Value, Mode=TwoWay, Converter={StaticResource DecimalDoubleConverter}}"
                 Margin = "0, 0, 6, 0"
@@ -95,7 +128,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key = "FloatTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <baseControls:FloatNumericUpDown
                 Value = "{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 Margin = "0, 0, 6, 0"
@@ -107,7 +140,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key = "ObjectTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
 
             <Grid Margin = "3, 0, 6, 0"
                   HorizontalAlignment = "Stretch"
@@ -124,23 +157,13 @@
                            HorizontalAlignment = "Left" />
 
                 <styleClasses:BaseButton Grid.Column = "1"
-                                         Margin = "2"
-                                         Padding = "0"
-                                         VerticalAlignment = "Stretch"
-                                         Click = "ViewObject_Button_Click"
-                                         HorizontalAlignment = "Stretch"
-                                         BorderThickness = "0">
-                    <Image Source = "/Assets/Icons/20x20/Eye20x20.png"
-                           VerticalAlignment = "Center"
-                           HorizontalAlignment = "Center"
-                           Stretch = "UniformToFill"
-                           Margin = "0" />
-                </styleClasses:BaseButton>
+                                         Style = "{StaticResource ViewDetailsButtonStyle}"
+                                         Click = "ViewObject_Button_Click" />
             </Grid>
         </DataTemplate>
 
         <DataTemplate x:Key = "CollectionTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <Grid Margin = "3, 0, 6, 0"
                   HorizontalAlignment = "Stretch"
                   VerticalAlignment = "Stretch">
@@ -155,40 +178,70 @@
                            HorizontalAlignment = "Left" />
 
                 <styleClasses:BaseButton Grid.Column = "1"
-                                         Margin = "2"
-                                         Padding = "0"
-                                         VerticalAlignment = "Stretch"
-                                         Click = "ViewCollection_Button_Click"
-                                         HorizontalAlignment = "Stretch"
-                                         BorderThickness = "0">
-                    <Image Source = "/Assets/Icons/20x20/Eye20x20.png"
-                           VerticalAlignment = "Center"
-                           HorizontalAlignment = "Center"
-                           Stretch = "UniformToFill"
-                           Margin = "0" />
-                </styleClasses:BaseButton>
+                                         Style = "{StaticResource ViewDetailsButtonStyle}"
+                                         Click = "ViewCollection_Button_Click" />
             </Grid>
         </DataTemplate>
 
+        <DataTemplate x:Key = "SingleEnumEditorTemplate"
+                      DataType = "{x:Type propItem:PropertyItem}">
+            <ComboBox ItemsSource = "{Binding Value, Converter={StaticResource EnumValuesProviderConverter}}"
+                      SelectedItem = "{Binding Value,Converter={StaticResource EnumValueProviderConverter}, Mode=TwoWay}"
+                      Margin = "1, 1, 4, 1"
+                      Background = "Transparent"
+                      TextSearch.TextPath = "Value"
+                      BorderThickness = "0">
+            </ComboBox>
+        </DataTemplate>
 
-        <uc:PropertyEditorTemplateSelector x:Key = "PropertyEditorSelector"
-                                           StringTemplate = "{StaticResource StringTemplate}"
-                                           BoolTemplate = "{StaticResource BoolTemplate}"
-                                           EnumTemplate = "{StaticResource EnumTemplate}"
-                                           IntTemplate = "{StaticResource IntTemplate}"
-                                           DecimalTemplate = "{StaticResource DecimalTemplate}"
-                                           FloatTemplate = "{StaticResource FloatTemplate}"
-                                           CollectionTemplate = "{StaticResource CollectionTemplate}"
-                                           ObjectTemplate = "{StaticResource ObjectTemplate}"
-                                           DefaultTemplate = "{StaticResource DefaultTemplate}" />
+        <DataTemplate x:Key = "EnumArrayEditorTemplate"
+                      DataType = "{x:Type propItem:PropertyItem}">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width = "1*" />
+                    <ColumnDefinition Width = "20" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Column = "0"
+                           Text = "{Binding Value, Converter={StaticResource EnumValuesToString}}">
+                </TextBlock>
+
+                <styleClasses:BaseButton Grid.Column = "1"
+                                         Style = "{StaticResource ViewDetailsButtonStyle}"
+                                         Click = "ViewEnumArray_Button_Click" />
+
+            </Grid>
+
+
+        </DataTemplate>
+
+        <propertyGrid:PropertyEditorTemplateSelector x:Key = "PropertyEditorSelector"
+                                                     StringTemplate = "{StaticResource StringTemplate}"
+                                                     BoolTemplate = "{StaticResource BoolTemplate}"
+                                                     EnumTemplate = "{StaticResource EnumTemplate}"
+                                                     IntTemplate = "{StaticResource IntTemplate}"
+                                                     DecimalTemplate = "{StaticResource DecimalTemplate}"
+                                                     FloatTemplate = "{StaticResource FloatTemplate}"
+                                                     CollectionTemplate = "{StaticResource CollectionTemplate}"
+                                                     ObjectTemplate = "{StaticResource ObjectTemplate}"
+                                                     DefaultTemplate = "{StaticResource DefaultTemplate}"
+                                                     SingleEnumTemplate = "{StaticResource SingleEnumEditorTemplate}"
+                                                     EnumArrayTemplate = "{StaticResource EnumArrayEditorTemplate}">
+
+            <!-- <propertyGrid:PropertyEditorTemplateSelector.CustomTemplates> -->
+            <!--     <propertyGrid:TypeTemplatePair Type="{x:Type win:Point}" Template="{StaticResource PointTemplate}" /> -->
+            <!--      -->
+            <!-- </propertyGrid:PropertyEditorTemplateSelector.CustomTemplates> -->
+        </propertyGrid:PropertyEditorTemplateSelector>
 
 
         <DataTemplate x:Key = "PropertyRowTemplate"
-                      DataType = "{x:Type delayedEvents:PropertyItem}">
+                      DataType = "{x:Type propItem:PropertyItem}">
             <Border x:Name = "OuterBorder"
                     BorderThickness = "1"
-                    Margin="2, 0"
-                    CornerRadius="4">
+                    Margin = "2, 0"
+                    CornerRadius = "4">
                 <Grid HorizontalAlignment = "Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition
