--- a/Arcanum.UI/Components/Windows/MinorWindows/SettingsWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/SettingsWindow.xaml
@@ -8,7 +8,8 @@
                          Title = "SettingsWindow"
                          Height = "700"
                          Width = "800"
-                         Background = "{StaticResource DefaultBackColorBrush}">
+                         Background = "{StaticResource DefaultBackColorBrush}"
+                         WindowStartupLocation = "CenterScreen">
 
     <Grid>
         <Grid.RowDefinitions>
