Refactor NUI navigation system:
- Removed legacy `INavigate` and `NavigationCommand` components.
- Introduced modern `INUINavigation` and `NUINavigation` for enhanced navigation handling.
- Added `NUINavHistory` to track navigation history and improve navigation context management.
- Integrated mouse button navigation (forward/backward) in `MainWindow` for better UX.
- Updated `Pop` and `PopType` navigation to use `INUINavigation`.
- Enhanced `NUIViewGenerator` to dynamically generate and set views with navigation support.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -13,6 +13,7 @@
                          FooterHeight = "26"
                          HeaderHeight = "30"
                          Loaded = "MainWindow_OnLoaded"
+                         PreviewMouseDown="Window_PreviewMouseDown"
                          WindowStartupLocation = "CenterScreen">
 
     <styleClasses:BaseWindow.DataContext>
