--- a/Arcanum.UI/NUI/UserControls/BaseControls/BaseEmbeddedView.xaml
+++ b/Arcanum.UI/NUI/UserControls/BaseControls/BaseEmbeddedView.xaml
@@ -6,23 +6,11 @@
              xmlns:local = "clr-namespace:Arcanum.UI.NUI.UserControls.BaseControls"
              mc:Ignorable = "d"
              d:DesignHeight = "300"
-             d:DesignWidth = "300">
+             d:DesignWidth = "300"
+             Margin="0, 3">
 
     <Grid x:Name = "ContentGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width = "*" />
-        </Grid.ColumnDefinitions>
-
-        <Border x:Name = "EmbedMarker"
-                Grid.Column = "0"
-                Background = "{StaticResource SelectedBackColorBrush}"
-                BorderBrush = "{StaticResource SelectedBackColorBrush}"
-                BorderThickness = "2"
-                CornerRadius = "1"
-                Width = "4"
-                Margin = "0, 0, 2, 0"
-                HorizontalAlignment = "Left">
-        </Border>
+        
     </Grid>
 
 </UserControl>
